# Nafion-RAG

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_phase1.py  0002_dual_text_layers.py
app/: main.py  ui.py
app/chunking/: simple.py
app/classification/: cli.py  report.py  rules.py
app/core/: config.py
app/db/: models.py  session.py
app/diagnostics/: doctor.py
app/evaluation/: cli.py  retrieval.py
app/extraction/: ocr.py  text_quality.py
app/ingestion/: cli.py  pdf_extract.py  pdf_store.py  service.py  text_layers.py
app/metadata/: doi.py
app/retrieval/: search.py
app/workers/: worker.py
docs/: architecture.md  data_model.md  evaluation_questions.yaml  operations.md
tests/unit/: test_api_search.py  test_checksum.py  test_chunking.py  test_classification_report.py  test_classification_rules.py  test_doctor.py  test_doi.py  test_evaluation.py  test_ingestion_cli.py  test_ocr.py  test_pdf_store.py  test_retrieval_search.py  test_text_layers.py  test_text_quality.py  test_ui_routes.py
