[project]
name = "nafion-rag"
version = "0.1.0"
description = "Local scientific PDF ingestion and retrieval system for Nafion/PFSA literature."
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13",
  "fastapi>=0.115",
  "pydantic-settings>=2.4",
  "psycopg[binary]>=3.2",
  "pymupdf>=1.24",
  "python-dotenv>=1.0",
  "sqlalchemy>=2.0",
  "typer>=0.12",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11",
  "pytest>=8.3",
  "ruff>=0.6",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 140
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
